--- a/src/main/resources/application-yun.yml
+++ b/src/main/resources/application-yun.yml
@@ -18,6 +18,11 @@ spring:
           starttls:
             enable: true
             required: true
+  servlet:
+    multipart:
+      max-file-size: 200MB
+      max-request-size: 200MB
+
   application:
     #????????
     name: xjbx
@@ -43,7 +48,11 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
-
+minio:
+  endpoint: http://localhost:9000
+  accessKey: 915950092
+  secretKey: 20010128
+  bucketName: xjbx
 
 xjbx:
-  path: a
+  path: /xiangmu/xjbx/image/
