修改方法调用 推荐 图文 个人动态 按话题查(热门) 按话题查(新帖) 我的关注 我的粉丝

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 
 spring:
   profiles:
-#    active: yun
-    active: loc
+    active: yun
+#    active: loc
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher # 解决swagger与高版本SpringBoot的冲突
